feat(index): 更新网站标题和图标
- 将网站图标从 vite.svg 更改为 logo.png
- 将网站标题从 "viyrs-cv" 更改为 "冷鱼闲风 - Viyrs"

--- a/src/App.css
+++ b/src/App.css
@@ -1647,7 +1647,12 @@ body::-webkit-scrollbar-thumb {
   }
 
   .big-footer-meta-right {
+    margin-top: 20px;
     align-items: flex-start;
+  }
+
+  .big-footer-tags {
+    display: none;
   }
 
   .big-footer-socials {
